--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<label class="logo">ChrisJo Foodshop</label>
 		<ul>
 			<li><a class="active" href="#">Home</a></li>
-			<li><a href="#">About Us</a></li>
-			<li><a href="#">Menu</a></li>
-			<li><a href="#">Services</a></li>
-			<li><a href="#">Contact Us</a></li>
+			<li><a href="#about">About Us</a></li>
+			<li><a href="#menu">Menu</a></li>
+			<li><a href="#services">Services</a></li>
+			<li><a href="#contactus">Contact Us</a></li>
 		</ul>
 	</nav>
 	<section>
@@ -30,33 +30,31 @@
 #TogetherWeCare program</p>
 		<a href="" class="hero-btn">Visit Us To Know More</a>
 	</section>
-	<div class="about">
+	
+	<div class="about" id="about">
 		<h1>All About Us</h1>
 		<p>ChrisJo FoodShop was founded March 19, 2021. Our most best seller Egg Mayo Rizzole was Originated by Chris Balin. ChrisJo FoodShop served good quality foods to our customer. We want best for our customers. We assured that all ingredients are fresh and the place of our shop is always sanitized </p>
-		<div class="row">
-			<div class="room-col">
+		<div class="row" id="menu">
+			<div class="foods-col">
 				<h3>Egg Mayo Rizolle</h3>
 			<p>Spacious and naturally secluded with ocean or garden views that will take your breath away, the villa at Ben's offers the ultimate in seaside serenity, complete with your own private plunge pool and patio.</p>
 			</div>
-			<div class="room-col">
+			<div class="foods-col">
 				<h3>Ice Cream</h3>
 			<p>Spacious and naturally secluded with ocean or garden views that will take your breath away, the villa at Ben's offers the ultimate in seaside serenity, complete with your own private plunge pool and patio.</p>
 			</div>
-			<div class="room-col">
+			<div class="foods-col">
 				<h3>Kikiam</h3>
 			<p>Spacious and naturally secluded with ocean or garden views that will take your breath away, the villa at Ben's offers the ultimate in seaside serenity, complete with your own private plunge pool and patio.</p>
 			</div>
 		</div>
-		<div class="mission">
-			<h2>Mission</h2>
+		<div class="services" id="services">
+			<h2>Services</h2>
 			<p>We are unswervingly committed in providing affordable but outstanding services and experiences to new and returning guests by exceeding their expectations of what we can offer, by recognizing and acknowledging our employees’ contributions and involvement, and by being responsible, conscientious, trustworthy, and dependable corporate citizens. </p>
 		</div>
-		<div class="vision">
-			<h1>Vision</h1>
-			<p>We aspire to be acknowledged regionally and creating an experience of traditional Filipino hospitality that is extraordinary and memorable.</p>
 		</div>
-		</div>
-		<section class = "contact-section">
+	</div>
+		<section class = "contact-section" id="contactus">
 			<div class = "contact-bg">
 			  <h3>Get in Touch with Us</h3>
 			  <h2>contact us</h2>
