--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<h1>Home Made Foods</h1>
 		<p>Together We Care<br>
 #TogetherWeCare program</p>
-		<a href="" class="hero-btn">Visit Us To Know More</a>
+		<a href="#" class="hero-btn">Visit Us To Know More</a>
 	</section>
 	
 	<div class="about" id="about">
