--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<li><a class="active" href="#">Home</a></li>
 			<li><a href="#about">About Us</a></li>
 			<li><a href="#menu">Menu</a></li>
+			<li><a href="#order">Order</a></li>
 			<li><a href="#services">Services</a></li>
 			<li><a href="#contactus">Contact Us</a></li>
 		</ul>
@@ -35,19 +36,47 @@
 		<h1>All About Us</h1>
 		<p>ChrisJo FoodShop was founded March 19, 2021. Our most best seller Egg Mayo Rizzole was Originated by Chris Balin. ChrisJo FoodShop served good quality foods to our customer. We want best for our customers. We assured that all ingredients are fresh and the place of our shop is always sanitized </p>
 		<div class="row" id="menu">
-			<div class="foods-col">
-				<h3>Egg Mayo Rizolle</h3>
-			<p>Spacious and naturally secluded with ocean or garden views that will take your breath away, the villa at Ben's offers the ultimate in seaside serenity, complete with your own private plunge pool and patio.</p>
-			</div>
-			<div class="foods-col">
-				<h3>Ice Cream</h3>
-			<p>Spacious and naturally secluded with ocean or garden views that will take your breath away, the villa at Ben's offers the ultimate in seaside serenity, complete with your own private plunge pool and patio.</p>
-			</div>
-			<div class="foods-col">
-				<h3>Kikiam</h3>
-			<p>Spacious and naturally secluded with ocean or garden views that will take your breath away, the villa at Ben's offers the ultimate in seaside serenity, complete with your own private plunge pool and patio.</p>
-			</div>
+				<div class="foods-col">
+					<h3>Egg Mayo Rizolle</h3>
+				<p>Spacious and naturally secluded with ocean or garden views that will take your breath away, the villa at Ben's offers the ultimate in seaside serenity, complete with your own private plunge pool and patio.</p>
+				</div>
+				<div class="foods-col">
+					<h3>Ice Cream</h3>
+				<p>Spacious and naturally secluded with ocean or garden views that will take your breath away, the villa at Ben's offers the ultimate in seaside serenity, complete with your own private plunge pool and patio.</p>
+				</div>
+				<div class="foods-col">
+					<h3>Kikiam</h3>
+				<p>Spacious and naturally secluded with ocean or garden views that will take your breath away, the villa at Ben's offers the ultimate in seaside serenity, complete with your own private plunge pool and patio.</p>
+				</div>
 		</div>
+		
+		<section class="items" id="order">
+			<div class="item">
+				<img src="eggmayo.jpg">
+				<h6>Egg Mayo Rizolle</h6>
+				<p class="price">PHP 150</p>
+				<p class="egg">Made by egg, vegetables, meat and chicken</p>
+				<button>Order</button>
+			</div>
+			<br>
+			<div class="item">
+				<img src="kikiam.jpg">
+				<h6>Kikiam</h6>
+				<p class="price">PHP 100</p>
+				<p class="egg">Made by fish, meat and chicken</p>
+				<button>Order</button>
+			</div>
+			<br>
+			<div class="item">
+				<img src="icecream.jpg">
+				<h6>Ice Cream</h6>
+				<p class="price">PHP 30</p>
+				<p class="egg">Made by chocolate, chips, and cookies</p>
+				<button>Order</button>
+			</div>
+		</section>
+		
+		<br>
 		<div class="services" id="services">
 			<h2>Services</h2>
 			<p>We are unswervingly committed in providing affordable but outstanding services and experiences to new and returning guests by exceeding their expectations of what we can offer, by recognizing and acknowledging our employees’ contributions and involvement, and by being responsible, conscientious, trustworthy, and dependable corporate citizens. </p>
@@ -56,6 +85,7 @@
 	</div>
 		<section class = "contact-section" id="contactus">
 			<div class = "contact-bg">
+			  <br>
 			  <h3>Get in Touch with Us</h3>
 			  <h2>contact us</h2>
 			  <div class = "line">
