add all changes

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 	<title>ChrisJo Foodshop</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/fcabf50647.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -13,7 +17,7 @@
 		<label for="check" class="checkbtn">
 			<i class="fas fa-bars"></i>
 		</label>
-		<label class="logo">ChrisJo Foodshop</label>
+		<label class="logo">Foodshop</label>
 		<ul>
 			<li><a class="active" href="#">Home</a></li>
 			<li><a href="#about">About Us</a></li>
@@ -120,22 +124,28 @@
 			</div>
 	
 			<div class = "contact-form">
-			  <form>
-				<div>
-				  <input type = "text" class = "form-control" placeholder="First Name">
-				  <input type = "text" class = "form-control" placeholder="Last Name">
+			  	<form>
+					<div>
+				 		 <input type = "text" class = "form-control" placeholder="First Name">
+				 		 <input type = "text" class = "form-control" placeholder="Last Name">
+					</div>
+					<div>
+				  		<input type = "email" class = "form-control" placeholder="E-mail">
+				  		<input type = "text" class = "form-control" placeholder="Phone">
+					</div>
+					<textarea rows = "5" placeholder="Message" class = "form-control"></textarea>
+					<input type = "submit" class = "send-btn" value = "send message">
+			  	</form>
 				</div>
-				<div>
-				  <input type = "email" class = "form-control" placeholder="E-mail">
-				  <input type = "text" class = "form-control" placeholder="Phone">
-				</div>
-				<textarea rows = "5" placeholder="Message" class = "form-control"></textarea>
-				<input type = "submit" class = "send-btn" value = "send message">
-			  </form>
-			</div>
-		
-		  </div>
-	
-
+				<br>
+				<br>
+		  	</div>
+			
+			  <footer>
+			
+				
+				<section class="R">All Rights Reserved by Cristhine Balin</section>
+				
+			  </footer>
 </body>
 </html>
